@@ -1,3 +1,4 @@
+* BUG#8041 Replace the contract start_date by the initial_start_date on the check method which is applied before launching endorsement modification
 * BUG#8144 Fix termination in current term with past periods
 * FEA#7655 Create one endorsement per contract in terminate, void, reactivate
 * FEA#7629 Add signature date on endorsements
